force-app/main/default/objects/Pet_Adopted__c/Pet_Adopted__c.object-meta.xml
<CustomObject>
    <label>Pet Adopted</label>
    <nameField>
        <displayFormat>Pet-{0000}</displayFormat>
        <label>Pet Adopted Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pets Adopted</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>