force-app/main/default/objects/Pet_Adopted__c/fields/Family_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Name__c</fullName>
    <label>Family Name</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Pets Adopted</relationshipLabel>
    <relationshipName>Pets_Adopted</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>