force-app/main/default/objects/Pet_Adopted__c/fields/Pet_Name__c.field-meta.xml
<CustomField>
    <fullName>Pet_Name__c</fullName>
    <label>Pet Name</label>
    <referenceTo>Pet__c</referenceTo>
    <relationshipLabel>Pets Adopted</relationshipLabel>
    <relationshipName>Pets_Adopted</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>